$Id$

2012-11-09  Christian Franke  <franke@computer.org>

	ataprint.cpp: Rework smartctl -l directory output.
	Add R/W, R/O info.  Report identical logs in one line.

2012-11-09  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: adding handling of SCSI devices exported with mfip
	driver. FreeBSD changing PDT code to 0x1f and we are changing it back
	to 0x00 (direct-access block device).
	os_freebsd.cpp: improved error handling for the ATA devices

2012-11-04  Christian Franke  <franke@computer.org>

	drivedb.h:
	- SandForce Driven SSDs: Mushkin Chronos
	- Indilinx Everest/Martini based SSDs: OCZ AGILITY4
	- Intel 710 Series SSDs: Add attribute 174
	- JMicron based SSDs: KINGSTON SSDNOW 30GB
	- Hitachi Deskstar 7K1000.C: *CLA330
	- Seagate DiamondMax 23, Barracuda 7200.12, 7200.14 (AF),
	  LP, Green (AF): no warnings for newer firmware versions
	- Western Digital Caviar Green (AF, SATA 6Gb/s): rename, add 1TB
	- USB: Toshiba Stor.E (0x0930:0x0b1[9a])
	- USB: Verbatim Store'n'Go (0x18a5:0x022b)

2012-11-02  Alex Samorukov  <samm@os2.kiev.ua>

	os_freebsd.cpp: disabling 48bit commands on legacy ATA controllers
	in ATACAM mode because of kernel bug.

2012-10-31  Christian Franke  <franke@computer.org>

	atacmdnames.cpp: Update for ATA-8-ACS, ACS-2, ACS-3.
	ataidentify.cpp: Mark retired/obsolete values.
	ataprint.cpp: Add new ACS-3 logs, mark obsolete logs.

2012-10-27  Alex Samorukov <samm@os2.kiev.ua>

	os_freebsd.cpp: Have smartd prefer real device names over passN.
	Patch provided by dnelson, see ticket #21
	os_freebsd.cpp: fix 48-bit support for ATA legacy controllers in
	ATACAM mode, patch provided by Alexander Motin

2012-10-25  Christian Franke  <franke@computer.org>

	atacmds.cpp: Return error for get SCT ERC if ATA registers are
	unchanged after SMART_WRITE_LOG command (see ticket #245).

2012-10-24  Christian Franke  <franke@computer.org>

	dev_areca.cpp: Add missing parameter check to ata_pass_through().
	Update Areca info on man pages.
